User API created (500 Error when log out)
